fix working directory

--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -15,7 +15,7 @@ on:
 env:
   TF_VERSION: '1.6.0'
   AWS_REGION: 'us-east-1'
-  WORKING_DIRECTORY: 'fastfood-infra'
+  WORKING_DIRECTORY: '.'
 
 jobs:
   terraform-plan:
@@ -42,19 +42,19 @@ jobs:
 
     - name: Terraform Format Check
       run: terraform fmt -check
-      working-directory: ${{ env.WORKING_DIRECTORY }}
+      working-directory: fastfood-infra
 
     - name: Terraform Init
       run: terraform init
-      working-directory: ${{ env.WORKING_DIRECTORY }}
+      working-directory: fastfood-infra
 
     - name: Terraform Validate
       run: terraform validate
-      working-directory: ${{ env.WORKING_DIRECTORY }}
+      working-directory: fastfood-infra
 
     - name: Terraform Plan
       run: terraform plan -no-color
-      working-directory: ${{ env.WORKING_DIRECTORY }}
+      working-directory: fastfood-infra
       env:
         TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
         TF_VAR_jwt_secret: ${{ secrets.JWT_SECRET }}
@@ -93,13 +93,13 @@ jobs:
         # Build auth Lambda
         cd fastfood-lambda/auth
         pip install -r requirements.txt -t .
-        zip -r ../../lambda-auth.zip .
+        zip -r ../../fastfood-infra/lambda-auth.zip .
         echo "✅ Auth Lambda function built successfully!"
         
         # Build Cognito challenge Lambda
         cd ../cognito-challenge
         pip install -r requirements.txt -t .
-        zip -r ../../lambda-cognito-challenge.zip .
+        zip -r ../../fastfood-infra/lambda-cognito-challenge.zip .
         echo "✅ Cognito challenge Lambda function built successfully!"
 
     - name: Terraform Init
